--- a/_sass/arcane/_components.scss
+++ b/_sass/arcane/_components.scss
@@ -478,7 +478,7 @@ select, option
     border-color: tint($container-color, $glow-portal-white-percent);
     box-shadow  : inset   0 0 ($portal-ring-spacing * 2) 1px rgba($container-color, 1),
                /*outset*/ 0 0  $glow-strong-border-blur  2px rgba($container-color, 1);
-    padding     : $portal-ring-spacing - 2;
+    padding     : ($portal-ring-spacing - 2) * 2;
     
     position    : relative;
 }
